# pc-phone-link

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install_phone_link_startup.py  pyproject.toml  remove_phone_link_startup.py  requirements.txt  run_phone_link.py  run_phone_link_launcher.py  run_wake_relay.py  start_copilot.py
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
android_companion/: README.md  gradlew  gradlew.bat  settings.gradle.kts
android_companion/app/: build.gradle.kts
android_companion/app/src/main/: AndroidManifest.xml
android_companion/app/src/main/res/layout/: activity_main.xml
android_companion/gradle/wrapper/: gradle-wrapper.properties
docs/: DEVELOPMENT.md  INSTALL.md  PAIRING.md  README.md  TROUBLESHOOTING.md  USAGE.md
packaging/: PCPhoneLinkHost.spec  PCPhoneLinkLauncher.spec  README.md  build_release.ps1
phone_link/: README.md  __init__.py  app.py  connect.py  desktop_gui.py  gesture_diagnostics.py  host_access.py  launcher.py  logging_utils.py  network.py  runtime_paths.py  startup.py  streaming.py  wake_relay.py  windows_host.py
phone_link/launcher_static/: app.js  index.html  styles.css
phone_link/static/: app.js  gestures.js  index.html  manifest.webmanifest  offline.html  styles.css  sw.js
phone_link/wake_static/: app.js  index.html  styles.css
tests/: browser_smoke.py  live_touch_smoke.py  test_gesture_diagnostics.py  test_gestures.js  test_native_touch.py  test_pwa_assets.py
(+6 files in other folders)
